Fix "Percentage Change" and "Total Counts" column alignments (#126)
* Align percentage change column values by center line

* Right-align and shorten total counts column

* Update snapshots

--- a/client/src/components/common/PercentageChange/PercentageChange.css
+++ b/client/src/components/common/PercentageChange/PercentageChange.css
@@ -1,9 +1,10 @@
 :local(.percentageChange) {
     display: flex;
+    width: 100%;
 }
 
 :local(.percentage) {
-    flex: 1;
+    flex: auto;
     text-align: right;
 }
 
